Updating methods section.

--- a/ecjsample.tex
+++ b/ecjsample.tex
@@ -48,7 +48,7 @@ Neural Networks.
 Evolutionary Algorithms typically employ static exploration methods, such as recombination and mutation, in order to traverse a search space. A problem with this approach is that ``building blocks", by which we mean structural features of the search space, can be easily broken, discarding important information acquired during the search process. Addressing this problem are Estimation of distribution algorithms (EDAs), which attempt to statistically model sections of a search space in order to uncover underlying structure and guide search towards optimal solutions in an efficient manner (\cite{pelikan2006scalable}).
 
 At the heart of any EDA lies a model-building process. Examples include Bayesian Networks, Markov Networks and K-Means clustering (\cite{pelikan2002survey}). In this paper we introduce and investigate two neural-based methods for modelling: a denoising autoencoder (dA) and the Neural Autoregressive Distribution Estimator (NADE). An autoencoder is a feed forward neural network, consisting of at least one hidden layer, which is trained to reproduce its inputs from its outputs. Over the course of training, the hidden layer forms a, typically compressed, representation of the inputs, which has been used in various complex machine learning tasks(\cite{hinton2006reducing}). We explore two special types of autoencoder for learning effective genotypes. The dA is an autoencoder trained using inputs that are stochastically corrupted, which acts as a strong regulariser and also widens the basins of attraction. Although the dA is not a generative model, the encoding process can capture relationships between variables. When combined with stochastic outputs the dA can provide mutations to seen solutions, guided by the learnt encoded structure of the search space. %We claim that a denoising autoencoder can be used to learn complex probability distributions that define the best genotypes in a generation, and guide search towards promising regions.%
-We also investigate the NADE, an autoencoder instance that explicitly learns a generative model from data, and has been shown to rival a Restricted Boltzmann Machine (RBM) but at a considerably lower computational cost (\cite{larochelle2011neural}). Results show that an evolutionary algorithm incorporating the autoencoder models is able to outperform a canonical genetic algorithm (GA) across a range of combinatorial optimisation problems, as well as the PBIL and BOA EDA methods in several cases.
+We also investigate the NADE, an autoencoder instance that explicitly learns a generative model from data. The NADE has been shown to rival a Restricted Boltzmann Machine (RBM) in its performance in addition to being tractable unlike the RBM (\cite{larochelle2011neural}). Results show that an evolutionary algorithm incorporating the autoencoder models is able to outperform a canonical genetic algorithm (GA) across a range of combinatorial optimisation problems, as well as the PBIL and BOA EDA methods in several cases.
 
 \section{Background}
 
@@ -65,11 +65,11 @@ Another motivation for using an autoencoder approach is to investigate methods i
 
 \subsection{Motivation}
 
-The main motivation for this paper is to assess whether neural network unsupervised learning methods can be used to learn genotypes. In the evolutionary computation literature this topic has mainly been investigated in the context EDAs. Typically, EDAs use unsupervised machine learning techniques to estimate distributions, i.e. build generative models, over the space of good quality solutions. Novel solutions are produced at each generation by updating and sampling from these distributions. An alternative approach is to use models that learn an encoding or compress the solution space, e.g. the generative grammar of \cite{cox2014solving}. Our proposed use of the denoising autoencoder deviates from the more standard generative model approach. Instead of learning a distribution over the entire solution space, we directly learn a mapping from a given input to a distribution over potential solutions. By carefully choosing the inputs to the autoencoder and the corruption noise, we can generate better solutions at each iteration. The autoencoder is a deterministic, feed-forward neural network architecture that does not presume a graphical structure like Bayesian networks and RBMs. The autoencoder can be trained online with mini-batch gradient descent which allows us to update the model at each iteration without having to rebuild the model every time. This implies the network has a slowly decaying memory over the good solutions and that interesting features learnt at one generation can be carried forward to future generations.
+The main motivation for this paper is to assess whether neural network unsupervised learning methods can be used to learn genotypes. In the evolutionary computation literature this topic has mainly been investigated in the context EDAs. Typically, EDAs use unsupervised machine learning techniques to estimate distributions, i.e. build generative models, over the space of good quality solutions. Novel solutions are produced at each generation by updating and sampling from these distributions. An alternative approach is to use models that learn an encoding or compress the solution space, e.g. the generative grammar of \cite{cox2014solving}. Our proposed use of the denoising autoencoder deviates from the more standard generative model approach in the following ways. Instead of learning a distribution over the entire solution space, we directly learn a mapping from a given input to a distribution over potential solutions. By carefully choosing the inputs to the autoencoder and the degree of input corruption or perturbation, we can generate better solutions at each iteration. Therefore, model building with the autoencoder gives us a greater degree of control during sampling, by allowing the user to carefully select the inputs to the autoencoder used for sampling. The autoencoder can also be finetuned during training by varying the degree of corruption of the inputs. The autoencoder can be trained online with mini-batch gradient descent which allows us to update the model at each iteration without having to rebuild the model every time. This implies the network has a slowly decaying memory over good solutions and that interesting features learnt at one generation can be carried forward to future generations.
 
-The alternative algorithm that we explore uses a NADE for model building, which is a distribution estimator for high-dimensional binary data. This algorithm is more like a standard EDA. The potential benefits of using the NADE is that it breaks down the difficult problem of learning a complex high-dimensional distribution to the problem learning a product of one-dimensional distributions. The NADE is a tractable approximation to the RBM and is therefore computationally more efficient to train and sample from when compared to the RBM. The RBM has already been applied successfully to multi-objective optimisation and therefore it would be interesting to see how the NADE performs in an EDA. The gradients of the objective function for training the NADE can be obtained exactly and therefore we can use powerful optimisers for better online training. Because the NADE can be trained online, we don't need to discard information between iterations. Another advantage of using the NADE, is that it can be easily extended to real-valued data. This is in contrast to other Bayesian EDAs like the BOA and the h-BOA. 
+%The alternative algorithm that we explore uses a NADE for model building, which is a distribution estimator for high-dimensional binary data. This algorithm is more like a standard EDA. The potential benefits of using the NADE is that it breaks down the difficult problem of learning a complex high-dimensional distribution to the problem learning a product of one-dimensional distributions. The NADE is a tractable approximation to the RBM and is therefore computationally more efficient to train and sample from when compared to the RBM. The RBM has already been applied successfully to multi-objective optimisation and therefore it would be interesting to see how the NADE performs in an EDA. The gradients of the objective function for training the NADE can be obtained exactly and therefore we can use powerful optimisers for better online training. Because the NADE can be trained online, we don't need to discard information between iterations. Another advantage of using the NADE, is that it can be easily extended to real-valued data. This is in contrast to other Bayesian EDAs like the BOA and the h-BOA. 
 
-
+The alternative algorithm that we explore uses a NADE for model building, which is a distribution estimator for high-dimensional binary data. As briefly mentioned before, the NADE was initially proposed as a tractable alternative to the RBM, but has since been shown to be very effective in its own right. The RBM has been successfully applied to multi-objective optimisation problems in the past and therefore it would be interesting to investigate how well the NADE performs in an EDA. Theoretically, the NADE has several advantages over the RBM. Unlike the RBM, the gradients of the objective function for training the NADE can be exactly computed. The NADE can also be trained in mini-batches using stochastic gradient descent, excluding the need for model-rebuilding at each generation. Stochastic sampling from the NADE is an easier process compared to Gibbs sampling from the RBM, where the optimal length of the Gibbs chain needs to be empirically determined during evaluation. Another advantage of using the NADE is that it can be extended to modelling real-valued data (cite RNAD), unlike the BOA and hBOA.  
 
 % Typically, an EDA consists of a generative probabilistic model or some other unsupervised learning technique to learn the structure and dependencies of the good solutions at every generation. The way we propose to use the autoencoder deviates slightly from the standard EDA. We do not use the autoencoder to learn a probability distribution over good solutions, like in an EDA. Instead we use the autoencoder to directly learn a mapping from 
 
@@ -103,11 +103,11 @@ In our algorithm we use a denoising autoencoder which is a variant of the standa
 \label{fig:corruption_hamming}
 \end{figure}
 
-We perform another experiment to test the effect of corruption noise on the outputs of the dA. We argue that increasing corruption noise widens the basin of attraction around the training examples. In this experiment, we train the GA on a 20-bit MaxOnes problem. The choice of the problem was motivated by the fact that MaxOnes has a unique optimum solution and the hamming distances from the optimal solution are easy to interpret. We allow the GA to run for 10 iterations and train the autoencoder on the best solutions at every iteration. The inputs to the dA are corrupted by a binary corruption process that stochastically flips a fixed proportion of bits for each example. The autoencoder is then trained to reconstruct the true targets from the corrupted inputs. After 10 iterations we present a set of randomly generated input vectors and sample a new population from the dA. We repeat this experiment with different corruption rates and the same set of input vectors and  plot the hamming distances of the new population from the optimum solution. From figure \ref{fig:corruption_hamming} we observe that increasing the corruption rate leads to a decrease in the hamming distances. This shows that as corruption noise is increased, the outputs of the dA are more likely to be closer to an example in the training set.
+We perform a simple experiment to test the effect of corruption noise on the outputs of the dA. We argue that increasing corruption noise widens the basin of attraction around the training examples. In this experiment, we train the GA on a 20-bit MaxOnes problem. The choice of the problem was motivated by the fact that MaxOnes has a unique optimum solution and the hamming distances from the optimal solution are easy to interpret. We allow the GA to run for 10 iterations and train the autoencoder on the best solutions at every iteration. The inputs to the dA are corrupted by a binary corruption process that stochastically flips a fixed proportion of bits for each example. The autoencoder is then trained to reconstruct the true targets from the corrupted inputs. After 10 iterations we present a set of randomly generated input vectors and sample a new population from the dA. We repeat this experiment with different corruption rates and the same set of input vectors and  plot the hamming distances of the new population from the optimum solution. From figure \ref{fig:corruption_hamming} we observe that increasing the corruption rate leads to a decrease in the hamming distances. This shows that as corruption noise is increased, the outputs of the dA are more likely to be closer to an example in the training set.
 
 \subsection{Neural Autoregressive Distribution Estimator}
 
-Although the outputs of the decoder network can be viewed as the parameters of a probability distribution, the autoencoder is inherently a deterministic unsupervised learning algorithm. The Neural Autoregressive Distribution Estimator (NADE) is a bayesian network for density estimation of high dimensional binary data. The NADE can be viewed as an autoencoder architecture devised such that the output units represent valid probabilities. The initial inspiration for the NADE was as a tractable approximation to the Restricted Boltzmann Machine (RBM). Restricted Boltzmann Machines have been used in EDAs for multi-objective optimisation in the past (reference). However, the NADE has been demonstrated to be an accurate density estimator on its own and has been used for various applications (refs). 
+Although the outputs of the decoder network can be viewed as the parameters of a probability distribution, the autoencoder is inherently a deterministic unsupervised learning algorithm. The Neural Autoregressive Distribution Estimator (NADE) is a Bayesian network for density estimation of high dimensional binary data. The NADE can be viewed as an autoencoder architecture devised such that the output units represent valid probabilities. The initial inspiration for the NADE was as a tractable approximation to the Restricted Boltzmann Machine (RBM). Restricted Boltzmann Machines have been used in EDAs for multi-objective optimisation in the past (reference). However, the NADE has been demonstrated to be an accurate density estimator on its own and has been used for various applications (refs). 
 
 The NADE belongs to the family of fully visible Bayesian networks that factorise the joint distribution of some $D$ dimensional data point $x$ as a product of one-dimensional conditional distributions:
 $$ P(x) = \prod_{i=1}^{D} P(x_i|x_{<i})$$ where $x_{<i} \equiv \left\{ x_k, \forall k < i \right\} $  and $D$ is the dimensionality of the input space. The main advantage of the factorisation above is that instead of trying to model a complex high-dimensional multi-modal distribution for $x$, the problem can be simplified to estimating the one-dimensional conditionals $P(x_i|x_{<i})$. A complex distribution can be estimated accurately if each conditional is learnt correctly. For the NADE: 
@@ -115,7 +115,9 @@ $$P(v_i=1|v_{i<i}) =  \sigma(b_i + W_{i,.}h_i)$$
 $$ h_i = \sigma(c+W_{.,<i}x_{<i})$$ where $W_{.,<i}$ denotes a sub-matrix of $W$ with columns $1$ to $i-1$. 
 The above network is equivalent to a feed-forward neural network for each conditional, with weight sharing between the neural networks. The tied connections distinguish the NADE from other fully visible Bayesian networks and make it computationally tractable to train and obtain probabilities at test time. Another advantage while using the NADE is that the log-likelihood and therefore the gradients can be computed exactly. This implies that the model can be trained with powerful gradient based optimisers without having to resort to sampling to estimate the log-likelihood like in training RBMs. 
 
-A theoretical limitation when using the NADE is the fact that the structure of the Bayesian graph is chosen \emph{a priori}. The NADE joint distribution is explicitly ordered from left to right. The NADE also assumes a dependence between a visible unit and all units preceding the unit. Theoretically, the ordering of the NADE should not affect density estimation given that each of the conditionals can be estimated accurately. However we did observe that assuming dependencies that don't......Add a little bit about back-propagation. 
+A theoretical limitation when using the NADE is the fact that the structure of the Bayesian graph is chosen \emph{a priori}. The NADE joint distribution is explicitly ordered from left to right. The NADE also assumes a dependence between a visible unit and all units preceding the unit. In theory, the ordering of the NADE should not affect density estimation if we assume that each conditional can be learnt accurately. However, we observed that estimating the conditions exactly is hard and sometimes the model can learn erroneous dependencies that are not actually present in the data. These observations and limitations are discussed in detail in Section K. 
+
+
 
 \subsection{Optimisation Algorithm}
 
